# softadastra-net

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
